# cute

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp  rename.py  test
Assembler/: CMakeLists.txt  assembler.cpp
Assembler/include/: CuteAsm.hpp
Bytecode/: CMakeLists.txt  bytes.c  image.c  loader.c  source.c
Bytecode/include/: CuteByte.h  cuteByte.h  cuteInstr.h  cuteProgImg.h  loader.h
Compiler/: CMakeLists.txt  compiler.cpp  internals.hpp  test.cpp
Compiler/analyzer/: analyzer.cpp  analyzer.hpp  name_resolver.cpp  name_resolver.hpp  type_checker.cpp  type_checker.hpp
Compiler/assembler/: assembler.cpp  assembler.hpp
Compiler/bytecode/: gen.hpp  units.cpp  units.hpp  writer.cpp
Compiler/codegen/: acc.cpp  node.cpp  node.hpp  units.hpp
Compiler/emitter/: emitter.cpp  emitter.hpp
Compiler/include/: CuteCompiler.hpp  CuteSpec.hpp
Compiler/node/: node.cpp  node.hpp  scope.hpp  walker.cpp  walker.hpp
Compiler/parser/: node.cpp  node.hpp  parser.cpp  parser.hpp
Compiler/resolver/: resolver.cpp  resolver.hpp
Compiler/spec/: error.hpp  lang.hpp  node.cpp  node.hpp  scope.hpp  spec.cpp  spec.hpp  syntax.hpp  types.cpp  types.hpp
Compiler/tokenizer/: lang.hpp  token.cpp  token.hpp  tokenizer.cpp  tokenizer.hpp
Compiler/transpiler/: codegen.hpp  transpiler.cpp  transpiler.hpp
Compiler/writer/: writer.cpp  writer.hpp
Cute/: CMakeLists.txt  containers.c  core.cpp  cute.c  main.c  main.cpp  string.c
Cute/include/: CuteArray.h  CuteContainer.h  CuteCore.h  CuteCore.hpp  CuteDyArray.h  CuteIO.h  CuteLib.h  CuteLib.hpp  CuteString.h  CuteTypes.h
Cute/internal/: logs.c  logs.h
Cute/parser/: parser.c  parser.h
Cute/parser/lexer/: lexer.c
Cute/src/: containers.c  cute.c  io.c  type.c
CuteByte/: CMakeLists.txt  bytes.c
CuteByte/include/: CuteByte.h
Engine/: CMakeLists.txt  atom.c  atom.h  context.c  context.h  engine.c  exe.c  exe.h  frame.c  frame.h
Engine/context/: context.h  exestack.c  exestack.h
Engine/core/: context.c  context.h  dump.c  dump.h  engine.c  engine_loop.c  error.c  error.h  exec.c  op.h
Engine/exe/: atom.h  cell.h  stack.c  stack.h
Engine/include/: CuteAtom.h  CuteConfig.h  CuteEngine.h  CuteInstr.h  cuteEngine.h
Engine/state/: config.h  error.c  error.h  exestack.c  exestack.h  frame.h  state.c  state.h
Tokenizer/: tokenizer.cpp
Tokenizer/include/: CuteToken.hpp
bytecode/: CMakeLists.txt  bytes.c
bytecode/include/: CuteByte.h  instr.h  loader.h
cute/: CMakeLists.txt  core.cpp  cute.c  cute.h  main.c  main.cpp
cute/atoms/: atoms.c  atoms.h
cute/core/: core.c  core.h
cute/dumper/: dumper.h
cute/engine/: engine.c  engine.h  instr.h
cute/eval/: eval.c  eval.h
cute/include/: CuteCore.hpp  atom.h  containers.h  cute.h  eval.h  parser.h  tokenizer.h
cute/lexer/: lexer.c  lexer.h  tokens.c  tokens.h
cute/parser/: atoms.c  atoms.h  node.c  node.h  parser.c  parser.h
cute/src/: atom.c  containers.c  cute.c  eval.c  main.c  parser.c  tokenizer.c
docs/: changelog.md  image.md  instr.md  nodes.md  todo.md
engine/: CMakeLists.txt  engine.c  frame.c  frame.h  instr.h  memory.h  operations.c
engine/include/: engine.h
entry/: CMakeLists.txt  main.c  main.cpp
include/: container.hpp  eval.hpp  interpreter.hpp  parser.hpp  tokenizer.hpp
src/: container.cpp  eval.cpp  interpreter.cpp  parser.cpp  tokenizer.cpp
tokenizer/: CMakeLists.txt  token.cpp  tokenizer.cpp
tokenizer/include/: CuteToken.hpp
